add option page

--- a/src/views/popup.html
+++ b/src/views/popup.html
@@ -5,12 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <script type="application/javascript" src="scripts/browser-polyfill.js"></script>
-  <script type="application/javascript" src="scripts/popup.js"></script>
+  <script type="application/javascript" src="lib/browser-polyfill.min.js"></script>
   <title>Daily Pomodoro</title>
 
 </head>
 <body>
-
+<div id="container">
+  <div id="message">...</div>
+  <div>
+    <a id="optionButton" href="/options/index.html">Settings</a>
+  </div>
+</div>
+<script type="application/javascript" src="scripts/popup.js"></script>
 </body>
 </html>
